@@ -5,9 +5,11 @@
 
 from xml.parsers import expat
 
+from test_support import sortdict
+
 class Outputter:
     def StartElementHandler(self, name, attrs):
-        print 'Start element:\n\t', repr(name), attrs
+        print 'Start element:\n\t', repr(name), sortdict(attrs)
 
     def EndElementHandler(self, name):
         print 'End element:\n\t', repr(name)
